welcome.lessons.welcome.summative.Moria.scala.code
back()
while (! isFacingWall) {
  if (isOverBaggle())
  	moveBaggle();
  
  forward();
  
  
}

def moveBaggle() {
  pickupBaggle();
  back();
  while (!isFacingWall() && !isOverBaggle() && isFacingWest) {
    forward();
  }
  
  
  backward();
  dropBaggle();
  back()
}

def isFacingWest():Boolean = {
  if (getDirection() == Direction.WEST)
  	return true
  
  return false
}